--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <nav id="navbar-primary" class="navbar" role="navigation">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbar-primary-collapse">
-<center><img id="logo-navbar-middle" src="img/nobody_likes_onions_logo.png" width="100" alt="Logo Thing main logo"><h2>NOBODY LIKES ONIONS</h2><h3>FAN COUNT</h3></center>
+<center><img id="logo-navbar-middle" src="https://upload.wikimedia.org/wikipedia/en/2/21/Nobody_Likes_Onions_Logo.png" width="100" alt="Logo Thing main logo"><h2>NOBODY LIKES ONIONS</h2><h3>FAN COUNT</h3></center>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
