--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:fb="http://ogp.me/ns/fb#">>
+      xmlns:fb="http://ogp.me/ns/fb#">
 <head>
 	<meta charset="UTF-8">
 	<meta property="og:image" content="https://lastfm-img2.akamaized.net/i/u/270x205/4314e500ad7143d1a927dc3ef9f0340b.jpg" />
