--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta property="og:image" content="https://lastfm-img2.akamaized.net/i/u/270x205/4314e500ad7143d1a927dc3ef9f0340b.jpg" />
+	<meta property="og:description" content="Nobody Likes Onions Remaining Fan Count" />
 	<title>NLO Fan Count</title>
 	<link rel="stylesheet" href="styles/main.css">
 	<!-- Latest compiled and minified CSS -->
